<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/tips"
        android:title="@string/tips"
        android:icon="@drawable/ic_tips"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/measures"
        android:title="@string/Measures"
        android:icon="@drawable/ic_measures"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/holder"
        android:title=""
        app:showAsAction="ifRoom"
        android:enabled="false"
        />

    <item
        android:id="@+id/data"
        android:title="@string/data"
        android:icon="@drawable/ic_data"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_account"/>


</menu>