<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panel_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ronifitgo.MainActivity"
    android:background="@drawable/back">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/panel_Menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_Top_Menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/panel_TopAppBar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/panel_Menu_IMG_profile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/panel_TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginStart="50dp"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/icon" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_Fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:clipToPadding="false"
            />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_BTN_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_add"
            app:borderWidth="0dp"
            app:layout_anchor="@id/panel_BottomAppBar"
            app:maxImageSize="50dp"
            app:tint="@color/title" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/main_BottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_menu" />


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/panel_BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="20dp"
            android:background="@color/white"
            app:fabCradleRoundedCornerRadius="10dp" />

        <LinearLayout
            android:id="@+id/main_Layout_addButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="90dp">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/main_BTN_AddWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/add_weight_weekly"
                android:textColor="@color/title"
                app:icon="@drawable/ic_weighning"
                app:iconTint="@color/title"
                app:borderWidth="0dp"
                app:maxImageSize="50dp"
                app:tint="@color/title" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/main_BTN_AddMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_measures"
                android:textColor="@color/title"
                app:icon="@drawable/ic_addmeasure"
                app:iconTint="@color/title"
                app:borderWidth="0dp"
                app:maxImageSize="50dp"
                app:tint="@color/title" />


        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.drawerlayout.widget.DrawerLayout>