<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ronifitgo.Fragments.">

    <LinearLayout
        android:id="@+id/weights_progressBars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_muscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.skholingua.android.custom_progressbar_circular.MainActivity" >


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/muscle_txt_titleProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/title_musclePercentage"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#03A9F4"
                    android:textSize="20dp" />

                <ProgressBar
                    android:id="@+id/muscle_txt_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/circle_shape"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:progressTint="#03A9F4"
                    android:secondaryProgress="70" />


                <TextView
                    android:id="@+id/muscle_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/muscle_txt_progressBar"
                    android:layout_centerInParent="true"
                    android:text="70%"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#03A9F4"
                    android:textSize="20dp" />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.skholingua.android.custom_progressbar_circular.MainActivity" >


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/item_txt_titleProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/title_fatPercentage"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#E91E63"
                    android:textSize="20dp" />

                <ProgressBar
                    android:id="@+id/fat_txt_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/circle_shape"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:progressTint="#E91E63"
                    android:secondaryProgress="70" />


                <TextView
                    android:id="@+id/fat_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/fat_txt_progressBar"
                    android:layout_centerInParent="true"
                    android:text="70%"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#E91E63"
                    android:textSize="20dp" />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.skholingua.android.custom_progressbar_circular.MainActivity" >


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/weight_txt_titleProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title_goal"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textSize="20dp" />

                    <ProgressBar
                        android:id="@+id/weight_txt_progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/circle_shape"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/circular_progress_bar"
                        android:secondaryProgress="40" />


                    <TextView
                        android:id="@+id/weight_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/weight_txt_progressBar"
                        android:layout_centerInParent="true"
                        android:text="40%"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textSize="20dp" />
                </RelativeLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</FrameLayout>